--- a/General_Salipada_K._Pendatun.mw
+++ b/General_Salipada_K._Pendatun.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao gen. s. k. pendatun.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> General Salipada K. Pendatun, Maguindanao
 | 1990 =		
@@ -33,6 +34,9 @@ Say '''General Salipada K. Pendatun''' et kumanem ya klase baley ed luyag na [[M
 * Sumakubay
 * Tonggol
 * Upper Lasangan
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
