--- a/Guindulungan.mw
+++ b/Guindulungan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao guindulungan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Guindulungan, Maguindanao
 | 1990 =		
@@ -25,6 +26,9 @@ Say '''Guindulungan''' et kumanem ya klase baley ed luyag na [[Maguindanao]], [[
 *Muti
 *Sampao
 *Tambunan II
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
