--- a/Kabuntalan.mw
+++ b/Kabuntalan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao kabuntalan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kabuntalan, Maguindanao
 | 1990 = 16842		
@@ -31,6 +32,9 @@ Say '''Kabuntalan''' et kumanem ya klase baley ed luyag na [[Maguindanao]], [[Pi
 * Pened
 * Poblacion
 * Upper Taviran
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
