--- a/Mamasapano.mw
+++ b/Mamasapano.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao mamasapano.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mamasapano, Maguindanao
 | 1990 =		
@@ -28,6 +29,9 @@ Say '''Mamasapano''' et kumalima ya klase baley ed luyag na [[Maguindanao]], [[P
 * Sapakan
 * Tuka
 * Tukanalipao
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
