--- a/Mangudadatu.mw
+++ b/Mangudadatu.mw
@@ -1,4 +1,5 @@
-[[File:Blank.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mangudadatu, Maguindanao
 | 1990 =		
@@ -22,6 +23,9 @@ Say '''Mangudadatu''' et kumanem ya klase baley ed luyag na [[Maguindanao]], [[P
 *Tenok
 *Tinambulan
 *Tumbao
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
