--- a/Matanog.mw
+++ b/Matanog.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao matanog.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Matanog, Maguindanao
 | 1990 = 14759		
@@ -22,6 +23,9 @@ Say '''Matanog''' et kumapat ya klase baley ed luyag na [[Maguindanao]], [[Pilip
 * Sapad
 * Langco
 * Langkong
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
