--- a/Paglat.mw
+++ b/Paglat.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao paglat.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Paglat, Maguindanao
 | 1990 =		
@@ -22,6 +23,9 @@ Say '''Paglat''' et kumanem ya klase baley ed luyag na [[Maguindanao]], [[Pilipi
 *Upper Idtig
 *Tual
 *Salam
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
