--- a/Parang,_Maguindanao.mw
+++ b/Parang,_Maguindanao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao parang.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Parang, Maguindanao
 | 1990 = 55355		
@@ -39,6 +40,9 @@ Say '''Parang''' et unaan ya klase baley ed luyag na [[Maguindanao]], [[Pilipina
 * Datu Macarimbang Biruar
 * Gadunganpedpandaran
 * Moro Point
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
