--- a/Shariff_Saydona_Mustapha.mw
+++ b/Shariff_Saydona_Mustapha.mw
@@ -1,4 +1,5 @@
-[[File:Blank.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Shariff Saydona Mustapha, Maguindanao
 | 1990 =		
@@ -30,6 +31,9 @@ Say '''Shariff Saydona Mustapha''' et kumanem ya klase baley ed luyag na [[Magui
 * Pusao 	
 * Libutan 	
 * Pagatin (Pagatin I) 
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
