--- a/South_Upi.mw
+++ b/South_Upi.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao south upi.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> South Upi, Maguindanao
 | 1990 = 20293		
@@ -25,6 +26,9 @@ Say '''South Upi''' et kumanem ya klase baley ed luyag na [[Maguindanao]], [[Pil
 * Pilar
 * Romangaob (Urban)
 * San Jose
+
+== Saray reperensiya ==
+{{Reflist}}
 			
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
