--- a/Sultan_Kudarat,_Maguindanao.mw
+++ b/Sultan_Kudarat,_Maguindanao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao sultan kudarat.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sultan Kudarat, Maguindanao
 | 1990 = 72331		
@@ -53,6 +54,9 @@ Say '''Sultan Kudarat''' et unaan ya klase baley ed luyag na [[Maguindanao]], [[
 * Ungap
 * Damaniog
 * Nara 
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
