--- a/Upi.mw
+++ b/Upi.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator maguindanao upi.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Upi, Maguindanao
 | 1990 = 45957		
@@ -37,6 +38,9 @@ Say '''Upi''' et unaan ya klase baley ed luyag na [[Maguindanao]], [[Pilipinas]]
 * Rifao
 * Sefegefen
 * Tinungkaan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
