--- a/Boac.mw
+++ b/Boac.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator marinduque boac.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Boac, Marinduque
 | 1990 = 41034		
@@ -75,6 +76,9 @@ Say '''Boac''' et unaan ya klase baley ed luyag na [[Marinduque]], [[Pilipinas]]
 * Tugos
 * Tumagabok
 * Tumapon
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
