--- a/Buenavista,_Marinduque.mw
+++ b/Buenavista,_Marinduque.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator marinduque buenavista.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Buenavista, Marinduque
 | 1990 = 15495		
@@ -29,6 +30,9 @@ Say '''Buenavista''' et kumapat ya klase baley ed luyag na [[Marinduque]], [[Pil
 * Barangay II (Poblacion)
 * Barangay III (Poblacion)
 * Barangay IV (Poblacion)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
