--- a/Gasan.mw
+++ b/Gasan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator marinduque gasan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Gasan, Marinduque
 | 1990 = 25236		
@@ -39,6 +40,9 @@ Say '''Gasan''' et kumatlo ya klase baley ed luyag na [[Marinduque]], [[Pilipina
 * Barangay I (Poblacion)
 * Barangay II (Poblacion)
 * Barangay III (Poblacion)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
