--- a/Santa_Cruz,_Marinduque.mw
+++ b/Santa_Cruz,_Marinduque.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator marinduque santa cruz.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Cruz, Marinduque
 | 1990 = 52926		
@@ -69,6 +70,9 @@ Say '''Santa Cruz''' et unaan ya klase baley ed luyag na [[Marinduque]], [[Pilip
 * Tambangan
 * Tawiran
 * Taytay
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
