--- a/Vallehermoso.mw
+++ b/Vallehermoso.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental vallehermoso.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Vallehermoso, Negros Oriental
 | 1990 = 27941		
@@ -29,6 +30,9 @@ Say '''Vallehermoso''' et kumatlo ya klase baley ed luyag na [[Negros Oriental]]
 * Tabon
 * Tagbino
 * Ulay
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
