--- a/Zamboanguita.mw
+++ b/Zamboanguita.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator negros oriental zamboanguita.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Zamboanguita, Negros Oriental
 | 1990 = 17111		
@@ -24,6 +25,9 @@ Say '''Zamboanguita''' et kumapat ya klase baley ed luyag na [[Negros Oriental]]
 * Nasig-id
 * Najandig
 * Poblacion
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
