--- a/Biri.mw
+++ b/Biri.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar biri.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Biri, Northern Samar
 | 1990 = 7467		
@@ -22,6 +23,9 @@ Say '''Biri''' et kumalima ya klase baley ed luyag na [[Northern Samar]], [[Pili
 *San Antonio
 *San Pedro
 *Santo Niño
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
