--- a/Bobon.mw
+++ b/Bobon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar bobon.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bobon, Northern Samar
 | 1990 = 13687		
@@ -32,6 +33,9 @@ Say '''Bobon''' et kumapat ya klase baley ed luyag na [[Northern Samar]], [[Pili
 *Santander
 *Somoroy
 *Trojillo
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
