--- a/Capul.mw
+++ b/Capul.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar capul.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Capul, Northern Samar
 | 1990 = 9510		
@@ -26,6 +27,9 @@ Say '''Capul''' et kumalima ya klase baley ed luyag na [[Northern Samar]], [[Pil
 *Sagaosawan
 *San Luis
 *Sawang
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
