--- a/Catarman.mw
+++ b/Catarman.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar catarman.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Catarman, Northern Samar
 | 1990 = 50965		
@@ -69,6 +70,9 @@ Say '''Catarman''' et unaan ya klase baley ed luyag na [[Northern Samar]], [[Pil
 *Tinowaran
 *Trangue
 *Washington
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
