--- a/Catubig.mw
+++ b/Catubig.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar catubig.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Catubig, Northern Samar
 | 1990 = 22057		
@@ -61,6 +62,9 @@ Say '''Catubig''' et kumatlo ya klase baley ed luyag na [[Northern Samar]], [[Pi
 *Barangay 6 (Pob.)
 *Barangay 7 (Pob.)
 *Barangay 8 (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
