--- a/Lapinig.mw
+++ b/Lapinig.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar lapinig.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lapinig, Northern Samar
 | 1990 = 8232		
@@ -29,6 +30,9 @@ Say '''Lapinig''' et kumalima ya klase baley ed luyag na [[Northern Samar]], [[P
 *Pio Del Pilar
 *Potong
 *Potong Del Sur
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
