--- a/Las_Navas.mw
+++ b/Las_Navas.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar las navas.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Las Navas, Northern Samar
 | 1990 = 22017		
@@ -67,6 +68,9 @@ Say '''Las Navas''' et kumapat ya klase baley ed luyag na [[Northern Samar]], [[
 *Taylor
 *Victory
 *H. Jolejole
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
