--- a/Lavezares.mw
+++ b/Lavezares.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar lavezares.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lavezares, Northern Samar
 | 1990 = 19058		
@@ -40,6 +41,9 @@ Say '''Lavezares''' et kumapat ya klase baley ed luyag na [[Northern Samar]], [[
 *Maravilla (island barangay)
 *San Isidro (island barangay)
 *San Juan (island barangay)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
