--- a/Lope_de_Vega.mw
+++ b/Lope_de_Vega.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar lope de vega.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lope de Vega, Northern Samar
 | 1990 = 9254		
@@ -36,6 +37,9 @@ Say '''Lope De Vega''' et kumapat ya klase baley ed luyag na [[Northern Samar]],
 *San Miguel
 *Somoroy
 *Upper Caynaga
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
