--- a/Mapanas.mw
+++ b/Mapanas.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar mapanas.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mapanas, Northern Samar
 | 1990 = 7553		
@@ -27,6 +28,9 @@ Say '''Mapanas''' et kumalima ya klase baley ed luyag na [[Northern Samar]], [[P
 *E. Laodenio
 *Manaybanay
 *Santa Potenciana (Pob.)
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
