--- a/Palapag.mw
+++ b/Palapag.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar palapag.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Palapag, Northern Samar
 | 1990 = 20114		
@@ -44,6 +45,9 @@ Say '''Palapag''' et kumatlo ya klase baley ed luyag na [[Northern Samar]], [[Pi
 *Tambangan
 *Tinampo
 *Laniwan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
