--- a/Rosario,_Northern_Samar.mw
+++ b/Rosario,_Northern_Samar.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar rosario.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Rosario, Northern Samar
 | 1990 = 6699		
@@ -25,7 +26,9 @@ Say '''Rosario''' et kumalima ya klase baley ed luyag na [[Northern Samar]], [[P
 *Commonwealth
 *Guindaulan
 *Kailingan
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
