--- a/San_Antonio,_Northern_Samar.mw
+++ b/San_Antonio,_Northern_Samar.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar san antonio.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Antonio, Northern Samar
 | 1990 = 7164		
@@ -24,7 +25,9 @@ Say '''San Antonio''' et kumalima ya klase baley ed luyag na [[Northern Samar]],
 *Rizal
 *San Nicolas
 *Vinisitahan
-	
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
