--- a/San_Jose,_Northern_Samar.mw
+++ b/San_Jose,_Northern_Samar.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator northern samar san jose.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Jose, Northern Samar
 | 1990 = 10773		
@@ -31,6 +32,8 @@ Say '''San Jose''' et kumalima ya klase baley ed luyag na [[Northern Samar]], [[
 *Barangay East (Pob.)
 *Barangay West (Pob.)
 
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
