--- a/San_Vicente,_Northern_Samar.mw
+++ b/San_Vicente,_Northern_Samar.mw
@@ -1,5 +1,5 @@
-[[File:Ph locator northern samar san vicente.png|right|230px]]
-[[File:San Vicente NorSam.jpg|230px|right]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Vicente, Northern Samar
 | 1990 = 5777		
@@ -22,6 +22,9 @@ Say '''San Vicente''' et kumanem ya klase baley ed luyag na [[Northern Samar]], 
 *Sangputan 
 *Sila
 *Tarnate
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
