--- a/Mexico,_Pampanga.mw
+++ b/Mexico,_Pampanga.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na México<br>''Balen ning Méhiko''<br>''Bayan ng Méhiko'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga mexico.png |
- caption      = Map of [[Pampanga]] showing the location of [[Mexico]]. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Central District |
- barangays    = 26 |
- class        = 2nd class |
- mayor        = [[Teddy Tumang|Teodoro Colette Tumang]] |
- founded      = 1572 |
- cityhood     = - |
- areakm2      = -  |
- pop2000      = 109,481 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mexico, Pampanga
 | 1990 = 69441		
@@ -30,16 +12,11 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''México''' ([[salitan Filipino|Filipino]]: ''Méhiko''), sakey siyudad diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay population to ya 109,481 ya too diad 20,382 ya pamilya. 
-
-==Lokasiyon==
-
-* [[SM City Pampanga]]
-* Star Mills (Robinson Malls)
+Say '''Mexico''' sakey siyudad diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay papulasyon to ya 109,481 ya too diad 20,382 ya pamilya. 
 
 == Listaan na barangay ==
 
-Say México walay 43 ya [[barangay]]:
+Say Mexico walay 43 ya [[barangay]]:
 
 <table border=0><tr>
 <td valign=top>
@@ -90,10 +67,11 @@ Say México walay 43 ya [[barangay]]:
 * Tangle
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
-
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
