--- a/Porac.mw
+++ b/Porac.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Porac<br>''Balen ning Purak''<br>''Lungsod sa Pinorak'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga porac.png |
- caption      = Map of [[Pampanga]] showing the location of Porac. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Western District |
- barangays    = 29 |
- class        = 3rd class |
- mayor        = Kenneth Cathryn Middleton-Baguio |
- founded      = - |
- cityhood     = [[1907]] |
- areakm2      = -  |
- pop2000      = 80,757 |
- popden2000   = - |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Porac, Pampanga
 | 1990 = 68215		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''Porac''' ([[salitan Kapampangan|Kapampangan]]: ''Balen ning Purak''; [[Salitan Cebuano|Cebuano]] ''Lungsod sa Pinorak''), sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay population to ya 80,757 ya too diad 15,686 ya pamilya. 
+Say '''Porac''' sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay papulasyon to ya 80,757 ya too diad 15,686 ya pamilya. 
 
 == Listaan na barangay ==
 
@@ -70,13 +52,11 @@ Say Porac walay 29 ya [[barangay]]:
 * Sapang Uwak (Aetas)
 </td></tr></table>
 
+== Saray reperensiya ==
+{{Reflist}}
 
-==Saray too diad Porac==
-
-* [[Lito Lapid]]
-
-{{philippines-geo-stub}}
 {{Pampanga}}
+{{philippines-geo-stub}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
