--- a/San_Simon.mw
+++ b/San_Simon.mw
@@ -1,23 +1,5 @@
-{{translation}}
+{{Infobox location}}
 
-{{Infobox Philippine city |
- infoboxtitle = Baley na San Simón<br>''Pueblo Municipalidad de San Simón''<br>''Municipalité du Saint-Simone'' |
- sealfile     = |
- locatormapfile = Ph_locator_pampanga san simon.png |
- caption      = Map of [[Pampanga]] showing the location of San Simon. |
- region       = [[Pegley na Luzon]] (Rehiyon III) |
- province     = [[Pampanga]] |
- districts    = Pampanga Eastern District |
- barangays    = 14 |
- class        = 3rd class |
- mayor        = Leonora C. Wong |
- founded      = November 15, 1771 |
- cityhood     = - |
- areakm2      = 57.37   |
- pop2000      = 48,050 |
- popden2000   = 4800 |
- coordinates  = |
-}}
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Simon, Pampanga
 | 1990 = 30851		
@@ -30,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''San Simón''' sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay population to ya 41,554 ya too diad 7,321 ya pamilya. 
+Say '''San Simon''' sakey baley diad [[Filipinas|Pilipino]] ed luyag na [[Pampanga]]. Onong ed [[2000]] census, walay papulasyon to ya 41,554 ya too diad 7,321 ya pamilya. 
 
 == Listaan na barangay ==
 
@@ -51,7 +33,8 @@ Say San Simón walay 14 ya [[barangay]]:
 * Santa Monica
 * Santo Niño
 
-
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Geographic location
  | Centre    = San Simon
@@ -66,4 +49,4 @@ Say San Simón walay 14 ya [[barangay]]:
 {{Pampanga}}
 
 [[Category:Pampanga]]
- [[Category:Saray baley na Pampanga]]
+[[Category:Saray baley na Pampanga]]
