--- a/San_Jorge.mw
+++ b/San_Jorge.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar san jorge.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Jorge, Samar 
 | 1990 = 10111		
@@ -55,6 +56,9 @@ Say '''San Jorge''' et kumapat ya klase baley ed luyag na [[Samar]], [[Pilipinas
 * Rawis
 * San Jorge II (Pob.)
 * San Juan
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
