--- a/San_Sebastian.mw
+++ b/San_Sebastian.mw
@@ -1,4 +1,4 @@
-[[File:Ph locator samar san sebastian.png|right|270px]]	
+{{Infobox location}}
 			
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Sebastian, Samar 
@@ -12,7 +12,7 @@
 | 2025 = 		
 | 2030 = 		
 |}}
-Say '''San Sebastian''' et kumanem ya klase baley ed luyag na [[Samar)]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 7,708 totoo. Walay kabaleg tan sukat to ya 39.07 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 6709.	
+Say '''San Sebastian''' et kumanem ya klase baley ed luyag na [[Samar]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 7,708 totoo. Walay kabaleg tan sukat to ya 39.07 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 6709.	
 			
 ==Saray barangay==
 * Poblacion Baranggay 1
@@ -29,6 +29,9 @@ Say '''San Sebastian''' et kumanem ya klase baley ed luyag na [[Samar)]], [[Pili
 * Cabaywa
 * Canduyucan
 * Hita-asan II
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
