--- a/Santa_Margarita.mw
+++ b/Santa_Margarita.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar santa margarita.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Margarita, Samar 
 | 1990 = 16878		
@@ -50,6 +51,9 @@ Say '''Santa Margarita''' et kumapat ya klase baley ed luyag na [[Samar]], [[Pil
 * Cagsunji
 * Matayonas
 * Napuro II
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
