--- a/Santo_Niño,_Samar.mw
+++ b/Santo_Niño,_Samar.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar santo nino.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santo Niño, Samar 
 | 1990 = 11743		
@@ -27,6 +28,9 @@ Say '''Santo Niño''' et kumalima ya klase baley ed luyag na [[Samar]], [[Pilipi
 * Sevilla
 * Takut
 * Villahermosa
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
