--- a/Villareal.mw
+++ b/Villareal.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar villareal.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Villareal, Samar 
 | 1990 = 21820		
@@ -52,6 +53,9 @@ Say '''Villareal''' et kumapat ya klase baley ed luyag na [[Samar]], [[Pilipinas
 * Tomabe
 * Ulayan
 * Patag
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
