--- a/Zumarraga.mw
+++ b/Zumarraga.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator samar zumarraga.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Zumarraga, Samar 
 | 1990 = 13324		
@@ -41,6 +42,9 @@ Say '''Zumarraga''' et kumalima ya  klase baley ed luyag na [[Samar]], [[Pilipin
 * Marapilit
 * Talib
 * Igpit opol
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
