--- a/Glan.mw
+++ b/Glan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sarangani glan.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Glan, Sarangani
 | 1990 = 60382		
@@ -13,7 +14,6 @@
 |}}
 Say '''Glan''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 106,518 totoo. Walay kabaleg tan sukat to ya 610.3 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 9517.	
 		
-
 ==Saray barangay==
 * Baliton
 * Batotuling
@@ -47,12 +47,14 @@ Say '''Glan''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]].
 * Tango
 * Tapon
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Sarangani}}
- 
-													
+ 												
 [[Category:Saray baley na Sarangani]]
