--- a/Kiamba.mw
+++ b/Kiamba.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sarangani kiamba.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Kiamba, Sarangani
 | 1990 = 35418		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Kiamba''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 54,871 totoo. Walay kabaleg tan sukat to ya 328.68 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 9514.	
-	
 
 ==Saray barangay==
 * Badtasan
@@ -35,12 +35,14 @@ Say '''Kiamba''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]
 * Tamadang
 * Tambilil
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Sarangani}}
- 
-														
+ 													
 [[Category:Saray baley na Sarangani]]
