--- a/Maasim.mw
+++ b/Maasim.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sarangani maasim.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Maasim, Sarangani
 | 1990 = 26734		
@@ -13,7 +14,6 @@
 |}}
 Say '''Maasim''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 52,933 totoo. Walay kabaleg tan sukat to ya 500.43 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 9502.	
 		
-
 ==Saray barangay==
 * Amsipit
 * Bales
@@ -31,6 +31,9 @@ Say '''Maasim''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]
 * Poblacion (Maasim)
 * Seven Hills
 * Tinoto
+
+== Saray reperensiya ==
+{{Reflist}}
 
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
