--- a/Maitum.mw
+++ b/Maitum.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sarangani maitum.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Maitum, Sarangani
 | 1990 = 25640		
@@ -13,7 +14,6 @@
 |}}
 Say '''Maitum''' et kumadwa ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 41,675 totoo. Walay kabaleg tan sukat to ya 290.66 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 9515.	
 	
-
 ==Saray barangay==
 * Bati-an
 * Kalaneg
@@ -35,12 +35,14 @@ Say '''Maitum''' et kumadwa ya klase baley ed luyag na [[Sarangani]], [[Pilipina
 * Wali
 * Zion
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Sarangani}}
- 
-														
+ 													
 [[Category:Saray baley na Sarangani]]
