--- a/Malapatan.mw
+++ b/Malapatan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sarangani malapatan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Malapatan, Sarangani
 | 1990 = 36255		
@@ -13,7 +14,6 @@
 |}}
 Say '''Malapatan''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 72,386 totoo. Walay kabaleg tan sukat to ya 609.28 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 9516.	
 	
-
 ==Saray barangay==
 * Daan Suyan
 * Kihan
@@ -28,12 +28,14 @@ Say '''Malapatan''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipin
 * Tuyan
 * Upper Suyan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
 {{Sarangani}}
- 
-														
+ 													
 [[Category:Saray baley na Sarangani]]
