--- a/Malungon.mw
+++ b/Malungon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sarangani malungon.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Malungon, Sarangani
 | 1990 = 57641		
@@ -13,7 +14,6 @@
 |}}
 Say '''Malungon''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 95,044 totoo. Walay kabaleg tan sukat to ya 750.92 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 9503.	
 	
-
 ==Saray barangay==
 
 * Alkikan
@@ -47,6 +47,9 @@ Say '''Malungon''' et unaan ya klase baley ed luyag na [[Sarangani]], [[Pilipina
 * Upper Biangan
 * Upper Lumabat
 * Upper Mainit
+
+== Saray reperensiya ==
+{{Reflist}}
 	
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
