--- a/Larena.mw
+++ b/Larena.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator siquijor larena.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Larena, Siquijor
 | 1990 = 11010		
@@ -13,7 +14,6 @@
 |}}
 Say '''Larena''' et kumalima ya klase baley ed luyag na [[Siquijor]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 12,931 totoo. Walay kabaleg tan sukat to ya 49.81 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6226.	
 		
-
 ==Saray barangay==
 * Bontod
 * Bagacay
@@ -39,10 +39,14 @@ Say '''Larena''' et kumalima ya klase baley ed luyag na [[Siquijor]], [[Pilipina
 * Cang-alias
 * Taculing
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Siquijor}}												
+{{Siquijor}}	
+											
 [[Category:Saray baley na Siquijor]]
