--- a/Lazi.mw
+++ b/Lazi.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator siquijor lazi.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Lazi, Siquijor
 | 1990 = 16672		
@@ -13,7 +14,6 @@
 |}}
 Say '''Lazi''' et kumapat ya klase baley ed luyag na [[Siquijor]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 20,024 totoo. Walay kabaleg tan sukat to ya 70.64 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6228.	
 		
-
 ==Saray barangay==
 * Campalanas
 * Cangclaran
@@ -34,8 +34,9 @@ Say '''Lazi''' et kumapat ya klase baley ed luyag na [[Siquijor]], [[Pilipinas]]
 * Upper Cabangcalan
 * Ytaya
 
+== Saray reperensiya ==
+{{Reflist}}
 	
-
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
