--- a/Maria,_Siquijor.mw
+++ b/Maria,_Siquijor.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator siquijor maria.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Maria, Siquijor
 | 1990 = 11140		
@@ -13,7 +14,6 @@
 |}}
 Say '''Maria''' et kumalima ya klase baley ed luyag na [[Siquijor]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 13,383 totoo. Walay kabaleg tan sukat to ya 53.37 sq. km. Sikato et walad alenleneg ya distrito. Say zip code to et 6229.	
 		
-
 ==Saray barangay==
 * Bogo
 * Bonga
@@ -38,8 +38,9 @@ Say '''Maria''' et kumalima ya klase baley ed luyag na [[Siquijor]], [[Pilipinas
 * Saguing
 * Sawang
 
+== Saray reperensiya ==
+{{Reflist}}
 	
-
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
