--- a/Siyudad_na_Sorsogon.mw
+++ b/Siyudad_na_Sorsogon.mw
@@ -1,6 +1,11 @@
-[[File:Ph_locator_sorsogon_sorsogon.png|right|270px]] 							
+{{Infobox location}}					
 									
 Say '''Siyudad na Sorsogon''' et unaan ya klase siyudad ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 155,144 totoo. <br> 	
-Walay kabaleg tan sukat to ya 276.11 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 4700. 			
+Walay kabaleg tan sukat to ya 276.11 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 4700. 	
+
+== Saray reperensiya ==
+{{Reflist}}	
+
+{{Sorsogon}}	
 									
 [[Category:Saray siyudad na Filipinas]]
