--- a/Bulan.mw
+++ b/Bulan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sorsogon bulan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bulan, Sorsogon
 | 1990 = 66450		
@@ -13,7 +14,6 @@
 |}}
 Say '''Bulan''' et unaan ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 100,076 totoo. Walay kabaleg tan sukat to ya 196.96 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4706.	
 			
-
 ==Saray barangay==
 
 * A. Bonifacio
@@ -80,8 +80,9 @@ Say '''Bulan''' et unaan ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]].
 * Zone VII Poblacion (Brgy. 7- Iraya)
 * Zone VIII Poblacion (Brgy. 8- Loyo)
 
+== Saray reperensiya ==
+{{Reflist}}
 	
-
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
