--- a/Casiguran,_Sorsogon.mw
+++ b/Casiguran,_Sorsogon.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator sorsogon casiguran.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Casiguran, Sorsogon
 | 1990 = 22277		
@@ -13,7 +14,6 @@
 |}}
 Say '''Casiguran''' et kumapat ya klase baley ed luyag na [[Sorsogon]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 32,842 totoo. Walay kabaleg tan sukat to ya 87.13 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4702.	
 			
-
 ==Saray barangay==
 
 * Adovis (Poblacion)
@@ -42,8 +42,9 @@ Say '''Casiguran''' et kumapat ya klase baley ed luyag na [[Sorsogon]], [[Pilipi
 * Trece Martirez
 * Tulay
 
+== Saray reperensiya ==
+{{Reflist}}
 	
-
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
